[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
flask = "2.3.3"
threaded = "4.1.0"
pytest-warnings = "0.3.1"
smartapi-python = "1.3.5"
python-time = "0.3.0"
pandas = "2.1.1"
pandas-ta = "0.3.14b"
datetime = "5.2"
pytz = "2023.3.post1"
requests = "2.31.0"
pyotp = "2.9.0"
os-sys-php = "2019.10.13"
websocket-client = "1.6.3"
login = "^0.0.6"
flask-pyngrok = "1.0.3"
waitress = "^2.1.2"
gunicorn = "21.2.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"